--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./flask_app.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
+        {
+          "src": "** /*.py",
+          "use": "@vercel/python"
+        }
+      ],
+      "routes": [
+        {
+          "src": "/test",
+          "dest": "api/test.py"
+        },
+        {
+          "src": "/flask",
+          "dest": "api/flask_app.py"
+        }
+      ]    
     ]
   }
